fix double scrollbar issue by adding 'overflow: hidden' in html styling

--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Josefin+Sans&family=Bungee&family=Russo+One&display=swap');
 
 html {
+  overflow: hidden;
   font-size: 62.5%;
 }
 
